very good jobs may be

--- a/blog/templates/articles.html
+++ b/blog/templates/articles.html
@@ -7,11 +7,16 @@
 <div class="blog-post">
             <h2 class="blog-post-title"><a href="/articles/get/{{article.id}}/"> {{article.article_title}}</a></h2>
             <p class="blog-post-meta">{{article.article_date}} by <a href="#">{{article.article_author.username}}</a></p>
-{{article.article_text}}
-         <!--   <P> {% autoescape off%}{{article.article_text}}{%endautoescape%}</P>
-          /.blog-post -->
 
-</div>
+            <P> {% autoescape off%}{{article.article_text_short}}{%endautoescape%}</P>
+
+
+
+<hr/>
+<P> {% autoescape off%}{{article.article_text}}{%endautoescape%}</P>
+          </div><!-- /.blog-post -->
+
+
 
 
 
