--- a/blog/templates/article.html
+++ b/blog/templates/article.html
@@ -8,27 +8,47 @@
     <p class="blog-post-meta">{{article.article_date}} by <a href="#">{{article.article_author.username}}</a></p>
     <P> {% autoescape off%}{{article.article_text}}{%endautoescape%}</P>
 </div><!-- /.blog-post -->
+<h2>Comments:</h2>
+
 
 {% for comment in comments %} <article>
-      <h6>Written by <a href="#">{{comment.comments_autor.username}}</a>{{comment.comments_data}}</h6>
-          <div class="row">
-          <div class="large-12 columns">
-            <p> {% autoescape off %}{{comment.comments_text}}{% endautoescape %}</p>
-          </div>
-          </div>
+
+<!------
+    <div class="panel panel-default">
+  <div class="panel-body">
+    <h4>Written by <a href="#">{{comment.comment_author.username}}</a> {{comment.comment_date}}</h4>
+  </div>
+  <div class="panel-footer"> <p> {% autoescape off %}{{comment.comment_text}}{% endautoescape %}</p></div>
+</div>
+------>
+<div class="media">
+  <div class="media-left media-middle">
+    <a href="#">
+      <img class="media-object" src="{% static 'img/64x64.png' %}" alt="...">
+    </a>
+  </div>
+  <div class="media-body">
+    <h4 class="media-heading">Written by <a href="#">{{comment.comment_author.username}}</a> {{comment.comment_date}}</h4>
+     <p> {% autoescape off %}{{comment.comment_text}}{% endautoescape %}</p>
+  </div>
+</div>
+<br/>
 {% endfor %} </article>
 
-
+<br/>
+<br/>
 {% if username %}
-    <div class="primary callout">
     <form action="/articles/add_comment/{{ article.id }}/" method="post">
     {% csrf_token %}
-    {{ form }}
-    <input type="submit" class="button" value="Добавить комментарий">
+
+
+        <div class="form-group">
+        <input  class="form-control" placeholder="Enter your message "type="form">
+        </div>
+            <button type="submit" class="btn btn-default">Send</button>
     </form>
-</div>{% else %}
-<h5> Для добавления комментария войдите на сайт! </h5>
+{% else %}
+<h3> Для добавления комментария войдите на сайт! </h3>
 {% endif %}
 
-<hr/>
 {% endblock %}
