--- a/templates/main.html
+++ b/templates/main.html
@@ -36,13 +36,24 @@
 
     <div class="blog-masthead">
       <div class="container">
+
         <nav class="blog-nav">
-          <a class="blog-nav-item active" href="#">Home</a>
-          <a class="blog-nav-item" href="#">New features</a>
-          <a class="blog-nav-item" href="#">Press</a>
-          <a class="blog-nav-item" href="#">New hires</a>
+          <a class="blog-nav-item active" href="/">Главная</a>
+            {% if not username %}
+          <a class="blog-nav-item" href="/auth/register/">Регистрация</a>
+          <a class="blog-nav-item" href="/auth/login/">Вход</a>
+            {% else %}
+          <a class="blog-nav-item" href="/auth/login/">Выход</a>
+            {% endif %}
           <a class="blog-nav-item" href="#">About</a>
+          <form class="navbar-form navbar-right" role="search">
+              <div class="form-group">
+                <input type="text" class="form-control" placeholder="Search">
+              </div>
+              <button type="submit" class="btn btn-default">Go</button>
+          </form>
         </nav>
+
       </div>
     </div>
 
@@ -54,14 +65,17 @@
         <p class="lead blog-description">The official example template of creating a blog with Bootstrap.</p>
       </div>
 
+
       <div class="row">
 
         <div class="col-sm-8 blog-main">
 
           <div class="blog-post">
             <p>{% block articles %}{% endblock %} </p>
-           <p>{% block article %}{% endblock %} </p>
-              </div>
+            <p>{% block article %}{% endblock %} </p>
+            <p>{% block login %}{% endblock %} </p>
+            <p>{% block register %}{% endblock %}</p>
+          </div>
 
 
 
@@ -70,6 +84,7 @@
         </div><!-- /.blog-main -->
 
         <div class="col-sm-3 col-sm-offset-1 blog-sidebar">
+
           <div class="sidebar-module sidebar-module-inset">
             <h4>About</h4>
             <p>Etiam porta <em>sem malesuada magna</em> mollis euismod. Cras mattis consectetur purus sit amet fermentum. Aenean lacinia bibendum nulla sed consectetur.</p>
