--- a/templates/main.html
+++ b/templates/main.html
@@ -12,7 +12,7 @@
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
 
-    <title>Blog Template for Bootstrap</title>
+    <title>Первый блог знакомство с Django</title>
 
     <!-- Bootstrap core CSS -->
     <link href="{% static 'css/bootstrap.min.css'%}" rel="stylesheet">
@@ -45,12 +45,11 @@
           <a class="blog-nav-item" href="/auth/register/">Регистрация</a>
           <a class="blog-nav-item" href="/auth/login/">Вход</a>
             {% else %}
-          <a class="blog-nav-item" href="/auth/login/">Выход</a>
+          <a class="blog-nav-item" href="/auth/logout/">Выход</a>
             {% endif %}
-          <a class="blog-nav-item" href="#">About</a>
-          <form class="navbar-form navbar-right" role="search">
+          <form action="/search/" class="navbar-form navbar-right" role="search">
               <div class="form-group">
-                <input type="text" class="form-control" placeholder="Search">
+                <input type="text" class="form-control" placeholder="Search" method="get"name="q">
               </div>
               <button type="submit" class="btn btn-default">Go</button>
           </form>
@@ -63,8 +62,8 @@
 
       <div class="blog-header">
 
-        <h1 class="blog-title">The Bootstrap Blog</h1>
-        <p class="lead blog-description">The official example template of creating a blog with Bootstrap.</p>
+        <h1 class="blog-title">Первый блог на Python/Django</h1>
+        <p class="lead blog-description">Статьи взять с http://www.unix-lab.org для наглядности.</p>
       </div>
 
 
@@ -78,6 +77,9 @@
             <p>{% block login %}{% endblock %} </p>
             <p>{% block register %}{% endblock %}</p>
             <p>{% block article_category %}{% endblock %}</p>
+            <p>{% block search_result %}{% endblock %}</p>
+            <p>{% block search_form %}{% endblock %}</p>
+
           </div>
 
 
@@ -89,8 +91,13 @@
         <div class="col-sm-3 col-sm-offset-1 blog-sidebar">
 
           <div class="sidebar-module sidebar-module-inset">
-            <h4>About</h4>
-            <p>Etiam porta <em>sem malesuada magna</em> mollis euismod. Cras mattis consectetur purus sit amet fermentum. Aenean lacinia bibendum nulla sed consectetur.</p>
+            <h4>О блоге</h4>
+            <li>Использовался:</li>
+            <li>Python 3.5</li>
+            <li> Django 1.9.4</li>
+            <li>Mptt</li>
+            <li>Ckeditor</li>
+            <li>Bootstrap</li>
           </div>
           <div class="sidebar-module">
             <h4>Archives</h4>
@@ -102,7 +109,7 @@
                     {% endif %}
                 {% endrecursetree %}
             </ol>
-          </div>
+          </div><!----
           <div class="sidebar-module">
             <h4>Elsewhere</h4>
             <ol class="list-unstyled">
@@ -110,7 +117,7 @@
               <li><a href="#">Twitter</a></li>
               <li><a href="#">Facebook</a></li>
             </ol>
-          </div>
+          </div>--->
         </div><!-- /.blog-sidebar -->
 
       </div><!-- /.row -->
